plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.aicoup'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.3.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.3.1'
	implementation 'org.springframework.boot:spring-boot-devtools:3.3.1'

	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.1'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.json:json:20231013'
//	implementation 'org.java-websocket:Java-WebSocket:1.5.1'
//	implementation 'org.springframework:spring-websocket:5.3.9'
//	implementation 'org.springframework:spring-messaging:5.3.20'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
}

tasks.withType(JavaCompile) {
}
